--- a/buildspec_zap.yml
+++ b/buildspec_zap.yml
@@ -10,7 +10,7 @@ phases:
     commands:
       - echo "build phase....."
       - aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=instanceids,Values=i-0594735cb2923b48d" --parameters "commands=['python3 /home/ec2-user/report.py']" --region ap-northeast-2
-      - risk_code_high=$(python -c "import json; data = json.load(open('{report_filename}.json')); print(sum(1 for item in data['site'][0]['alerts'] if item.get('riskcode') == '3'))")
+      - risk_code_high=$(python -c "import json; data = json.load(open('zap-scan-report.json')); print(sum(1 for item in data['site'][0]['alerts'] if item.get('riskcode') == '3'))")
       - if [ "$risk_code_high" -gt 0 ]; then
           echo "there are high alerts.. failing the build"
           exit 1;
