--- a/buildspec_zap.yml
+++ b/buildspec_zap.yml
@@ -9,11 +9,7 @@ phases:
   build:
     commands:
       - echo "build phase....."
-      - aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=instanceids,Values=i-0594735cb2923b48d" --parameters "commands=['python3 /home/ec2-user/report.py']" --region ap-northeast-2
-      - aws s3 cp s3://dast-hbucket/Report/zap-scan-report.json /home/ec2-user/zap-scan-report.json  
-  post_build:
-    commands:
-      #- aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=instanceids,Values=i-0594735cb2923b48d" --parameters "commands=['python3 /home/ec2-user/report.py']" --region ap-northeast-2
+      - aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=instanceids,Values=i-0594735cb2923b48d" --parameters "commands=['python3 /home/ec2-user/report.py', 'aws s3 cp s3://dast-hbucket/Report/zap-scan-report.json /home/ec2-user/zap-scan-report.json']" --region ap-northeast-2
       - risk_code_high=$(python -c "import json; data = json.load(open('/home/ec2-user/zap-scan-report.json')); print(sum(1 for item in data['site'][0]['alerts'] if item.get('riskcode') == '3'))")
       - echo "Risk Code High: $risk_code_high"
       - if [ "$risk_code_high" -gt 0 ]; then
@@ -21,3 +17,6 @@ phases:
           exit 1;
         fi
       - echo "Build completed on $(date)"
+  #post_build:
+    #commands:
+      # Add your post-build commands here if needed
