--- a/buildspec-owasp-zap.yml
+++ b/buildspec-owasp-zap.yml
@@ -6,19 +6,21 @@ phases:
     commands:
       - echo "install phase....."
   pre_build:
-    commands:
-      - scanid=$(curl "$OwaspZapURL/JSON/ascan/action/scan/?apikey=$OwaspZapApiKey&url=$ApplicationURL&recurse=true&inScopeOnly=&scanPolicyName=&method=&postData=&contextId=" | jq -r '.scan')
-      - |
-        stat=50;
-        while [ "$stat" != 100 ]; do
-          stat=$(curl "$OwaspZapURL/JSON/ascan/view/status/?apikey=$OwaspZapApiKey&scanId=$scanid" | jq -r '.status');
-          echo "OWASP ZAP scan status is $stat"
-          echo "OWASP Zap analysis status is in progress...";
-          sleep 5;
-        done
-        echo "OWASP Zap analysis status is completed..."; 
-      - high_alerts=$( curl "$OwaspZapURL/JSON/alert/view/alertsSummary/?apikey=$OwaspZapApiKey&baseurl=$ApplicationURL" | jq -r '.alertsSummary.High')
-      - echo "high alerts are $high_alerts"    
+  commands:
+    - response=$(curl "$OwaspZapURL/JSON/ascan/action/scan/?apikey=$OwaspZapApiKey&url=$ApplicationURL&recurse=true&inScopeOnly=&scanPolicyName=&method=&postData=&contextId=")
+    - echo "Response from OWASP ZAP API: $response"
+    - scanid=$(echo "$response" | jq -r '.scan')
+    - |
+      stat=50;
+      while [ "$stat" != 100 ]; do
+        stat=$(curl "$OwaspZapURL/JSON/ascan/view/status/?apikey=$OwaspZapApiKey&scanId=$scanid" | jq -r '.status');
+        echo "OWASP ZAP scan status is $stat"
+        echo "OWASP Zap analysis status is in progress...";
+        sleep 5;
+      done
+      echo "OWASP Zap analysis status is completed...";
+    - high_alerts=$(curl "$OwaspZapURL/JSON/alert/view/alertsSummary/?apikey=$OwaspZapApiKey&baseurl=$ApplicationURL" | jq -r '.alertsSummary.High')
+    - echo "High alerts are $high_alerts"  
   build:
     commands: 
       - curl "$OwaspZapURL/OTHER/core/other/jsonreport/?apikey=$OwaspZapApiKey" | jq . > zap-scan-results.json
