--- a/buildspec_zap.yml
+++ b/buildspec_zap.yml
@@ -18,3 +18,6 @@ phases:
           echo "There are high alerts. Failing the build.";
         fi
       - echo "Build completed on $(date)"
+artifacts:
+  files: /home/ec2-user/zap-scan-report.json
+  base-directory: /home/ec2-user
