--- a/buildspec_zap.yml
+++ b/buildspec_zap.yml
@@ -6,15 +6,18 @@ phases:
   pre_build:
     commands:
       - echo "pre build phase....."
+      - curl -L https://github.com/zaproxy/zaproxy/releases/download/2.14.0/ZAP_2.14.0_Linux.tar.gz -o ZAP_2.14.0
+      - tar -xzvf ZAP_2.14.0
+      - chmod +x /home/ec2-user/ZAP_2.14.0/zap.sh
   build:
     commands:
       - echo "build phase....."
-      - aws s3 cp s3://dast-hbucket/Report/zap-scan-report.json /home/ec2-user/zap-scan-report.json
-      - aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=instanceids,Values=i-0594735cb2923b48d" --parameters "commands=['python3 /home/ec2-user/report.py']" --region ap-northeast-2
+      #- aws s3 cp s3://dast-hbucket/Report/zap-scan-report.json /home/ec2-user/zap-scan-report.json
+      #- aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=instanceids,Values=i-0301c689f48d95298" --parameters "commands=['python3 /home/ec2-user/report.py']" --region ap-northeast-2
   post_build:
     commands:
-      - risk_code_high=$(python -c "import json; data = json.load(open('/home/ec2-user/zap-scan-report.json')); print(sum(1 for item in data['site'][0]['alerts'] if item.get('riskcode') == '3'))")
-      - if [ "$risk_code_high" -gt 0 ]; then
-          echo "There are high alerts. Failing the build.";
-        fi
+      #- risk_code_high=$(python -c "import json; data = json.load(open('/home/ec2-user/zap-scan-report.json')); print(sum(1 for item in data['site'][0]['alerts'] if item.get('riskcode') == '3'))")
+      #- if [ "$risk_code_high" -gt 0 ]; then
+      #    echo "There are high alerts. Failing the build.";
+      #  fi
       - echo "Build completed on $(date)"
