--- a/buildspec_zap.yml
+++ b/buildspec_zap.yml
@@ -6,9 +6,14 @@ phases:
   pre_build:
     commands:
       - echo "pre build phase....."
-      - curl -L https://github.com/zaproxy/zaproxy/releases/download/2.14.0/ZAP_2.14.0_Linux.tar.gz -o ZAP_2.14.0
-      - tar -xzvf ZAP_2.14.0
+      # zap 설치
+      - wget -q https://github.com/zaproxy/zaproxy/releases/download/v2.14.0/ZAP_2.14.0_Linux.tar.gz
+      - tar -zxvf ZAP_2.14.0_Linux.tar.gz
+      - rm ZAP_2.14.0_Linux.tar.gz
       - chmod +x /home/ec2-user/ZAP_2.14.0/zap.sh
+      # zap-cli 설치
+      - pip3 install --upgrade git+https://github.com/Grunny/zap-cli.git
+      - whereis zapcli
   build:
     commands:
       - echo "build phase....."
