--- a/buildspec_zap.yml
+++ b/buildspec_zap.yml
@@ -10,7 +10,7 @@ phases:
       - wget -q https://github.com/zaproxy/zaproxy/releases/download/v2.14.0/ZAP_2.14.0_Linux.tar.gz
       - tar -zxvf ZAP_2.14.0_Linux.tar.gz
       - rm ZAP_2.14.0_Linux.tar.gz
-      - chmod +x /home/ec2-user/ZAP_2.14.0/zap.sh
+      - chmod +x ./ZAP_2.14.0/zap.sh
       # zap-cli 설치
       - pip3 install --upgrade git+https://github.com/Grunny/zap-cli.git
       - whereis zapcli
