--- a/buildspec_zap.yml
+++ b/buildspec_zap.yml
@@ -14,6 +14,8 @@ phases:
       # zap-cli 설치
       - pip3 install --upgrade git+https://github.com/Grunny/zap-cli.git
       - whereis zap-cli
+      - mv /root/.pyenv/shims/zap-cli ./ZAP_2.14.0/
+      - ls ./ZAP_2.14.0
   build:
     commands:
       - echo "build phase....."
