--- a/buildspec_zap.yml
+++ b/buildspec_zap.yml
@@ -10,6 +10,7 @@ phases:
     commands:
       - echo "build phase....."
       - aws ssm send-command --document-name "AWS-RunShellScript" --targets "Key=instanceids,Values=i-0594735cb2923b48d" --parameters "commands=['python3 /home/ec2-user/report.py']" --region ap-northeast-2
+      - sleep 65
       - aws s3 cp s3://dast-hbucket/Report/zap-scan-report.json /home/ec2-user/zap-scan-report.json
   post_build:
     commands:
