--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,3 +27,6 @@ artifacts:
     # zap_start.py
     # zap_scan.py
   #discard-paths: yes
+post_build:
+  commands:
+    - aws s3 cp ./target/webgoat-2023.6-SNAPSHOT.jar s3://dast-hbucket/   # S3 버킷으로 아티팩트 업로드 명령
